fixed spacing on schedule button

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ a:focus {
 }
 
 .space {
-  height: 30vh;
   background-image: url('assets/space.jpeg');
   background-size: cover;
   background-position: center;
@@ -224,6 +223,10 @@ a:focus {
     padding-bottom: 1em !important;
     padding-left: 1em !important;
     padding-right: 1em !important;
+  }
+  #patreon {
+    margin-left: 0em !important;
+    margin-right: 0em !important;
   }
 }
 
